# ros2_ws1_ethercat_communicate

./: install igh ethercat
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/control_one_motor_pkg_ex/lib/control_one_motor_pkg_ex/: display_chart.py  inverse_kinematic.py  status_motor.py
install/control_one_motor_pkg_ex/share/control_one_motor_pkg_ex/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control_one_motor_pkg_ex/share/control_one_motor_pkg_ex/cmake/: control_one_motor_pkg_exConfig-version.cmake  control_one_motor_pkg_exConfig.cmake
install/control_one_motor_pkg_ex/share/control_one_motor_pkg_ex/config/: hexapod_controller.yaml  motor_config.yaml
install/control_one_motor_pkg_ex/share/control_one_motor_pkg_ex/environment/: ament_prefix_path.dsv  path.dsv
install/control_one_motor_pkg_ex/share/control_one_motor_pkg_ex/launch/: robot_control.launch.py
install/ethercat_driver/include/ethercat_driver/: ethercat_driver.hpp  visibility_control.h
install/ethercat_driver/share/ethercat_driver/: ethercat_driver_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/ethercat_driver/share/ethercat_driver/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ethercat_driverConfig-version.cmake  ethercat_driverConfig.cmake
install/ethercat_driver/share/ethercat_driver/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/ethercat_driver_ros2/share/ethercat_driver_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/ethercat_driver_ros2/share/ethercat_driver_ros2/cmake/: ethercat_driver_ros2Config-version.cmake  ethercat_driver_ros2Config.cmake
install/ethercat_driver_ros2/share/ethercat_driver_ros2/environment/: ament_prefix_path.dsv  path.dsv
install/ethercat_generic_cia402_drive/include/ethercat_generic_plugins/: cia402_common_defs.hpp  generic_ec_cia402_drive.hpp
install/ethercat_generic_cia402_drive/share/ethercat_generic_cia402_drive/: ethercat_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/ethercat_generic_cia402_drive/share/ethercat_generic_cia402_drive/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  ethercat_generic_cia402_driveConfig-version.cmake  ethercat_generic_cia402_driveConfig.cmake  export_ethercat_generic_cia402_driveExport.cmake
install/ethercat_generic_cia402_drive/share/ethercat_generic_cia402_drive/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/ethercat_generic_slave/include/ethercat_generic_plugins/: generic_ec_slave.hpp
install/ethercat_generic_slave/share/ethercat_generic_slave/: ethercat_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/ethercat_interface/include/ethercat_interface/: ec_master.hpp  ec_pdo_channel_manager.hpp  ec_sdo_manager.hpp  ec_slave.hpp  ec_sync_manager.hpp
install/ethercat_interface/share/ethercat_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/ethercat_manager/lib/ethercat_manager/: ethercat_sdo_srv_server
install/ethercat_manager/share/ethercat_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/ethercat_msgs/share/ethercat_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/ros2_qt1_demo/lib/ros2_qt1_demo/: ros2_qt1_demo
install/ros2_qt1_demo/share/ros2_qt1_demo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/control_one_motor_pkg_ex/: CMakeLists.txt  package.xml
src/control_one_motor_pkg_ex/config/: hexapod_controller.yaml  motor_config.yaml
src/control_one_motor_pkg_ex/description/urdf/: motor_drive.ros2_control.xacro  robot.urdf.xacro  robot_core.xacro
src/control_one_motor_pkg_ex/launch/: robot_control.launch.py
src/control_one_motor_pkg_ex/scripts/: control_motor.py  display_chart.py  home_motor.py  inverse_kinematic.py  status_motor.py  sync_axis.py
src/ros2_qt1_demo/: CMakeLists.txt  package.xml
src/ros2_qt1_demo/include/: displayStatuMotor.h  mainwindow.h  ros2_worker.h
src/ros2_qt1_demo/src/: displayStatuMotor.cpp  mainwindow.cpp  ros2_worker.cpp
src/ros2_qt1_demo/ui/: mainwindow.ui
(+119 files in other folders)
